Squashing bugs and preparing for final release.

--- a/styles/cp-automation.css
+++ b/styles/cp-automation.css
@@ -24,6 +24,8 @@
   border: none;
   border-radius: 4px;
   width: 150px;
+  font-weight: 600;
+  color: black;
 }
 
 .heading{
